--- a/PortalSocios/PortalSocios/Views/Account/ForgotPassword.cshtml
+++ b/PortalSocios/PortalSocios/Views/Account/ForgotPassword.cshtml
@@ -1,21 +1,18 @@
 ﻿@model PortalSocios.Models.ForgotPasswordViewModel
-@{
-    ViewBag.Title = "Esqueceste-te da tua palavra-passe?";
-}
 
-<h2>@ViewBag.Title</h2>
+<div class="titulo"><h2>Esqueceste-te da tua palavra-passe?</h2></div>
 
-@using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
+@using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
     @Html.AntiForgeryToken()
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group form-inline">
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "E-mail" })
-            <input type="submit" class="btn btn-success" value="Enviar" />
+    <div class="container painel">
+        <div class="col-md-12 form-inline">
+
+            @*Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "E-mail" })*@
+            <!--<input type="submit" class="btn btn-primary" value="Enviar" />-->
         </div>
-    </div>
+     </div>
 }
 
 @section Scripts {
