--- a/PortalSocios/PortalSocios/Views/Home/Index.cshtml
+++ b/PortalSocios/PortalSocios/Views/Home/Index.cshtml
@@ -3,13 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <title>Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
-    <style>
-    </style>
-    <script>
-    </script>
 </head>
 <body>
-    <div class="jumbotron" style="text-align:center">
+    <div class="jumbotron painel">
         <h1>Clube Desportivo Coxos da Bola</h1>
         <p>Bem-vindo ao Portal dos Sócios do CDCB.</p>
     </div>
