--- a/PortalSocios/PortalSocios/Views/Home/Sobre.cshtml
+++ b/PortalSocios/PortalSocios/Views/Home/Sobre.cshtml
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title> Sobre | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
+    <link rel="stylesheet" href="~/Content/Site.css" />
     <script>
         // altera a foto do autor para o logo do curso
         function alterElems() {
@@ -18,26 +19,24 @@
     </script>
 </head>
 <body>
-    <h2>Sobre</h2>
+    <div class="titulo"><h3>Sobre</h3></div>
     <hr />
-    <div class="container text-center">
-        <div class="row">
+    <div class="container">
+        <div class="row painel">
             <div class="col-lg-12">
-                <h2>Tecnologias da Internet II - 2016/2017</h2>
+                <h3>Tecnologias da Internet II - 2016/2017</h3>
                 <h4>Aluno n.º 15233 - Rodrigo Daniel Nunes Carrão</h4>
             </div>
             <div class="col-lg-12">
-                <br />
                 <img id="foto" class="img-circle img-responsive img-center" src="~/Content/Imagens/fotorc.jpg" />
-                <br />
                 <h3>Utilizadores</h3>
-                <p>Role: Funcionario</p>
-                <p>E-mail: dalves@cdcb.pt</p>
-                <p>Palavra-chave: 123qwe#</p>
+                <p><span class="tipo">Role:</span> Funcionario</p>
+                <p><span class="tipo">E-mail:</span> dalves@cdcb.pt</p>
+                <p><span class="tipo">Palavra-chave:</span> 123qwe#</p>
                 <br />
-                <p>Role: Socio</p>
-                <p>E-mail: smodesto@gmail.com</p>
-                <p>Palavra-chave: 123qwe#</p>
+                <p><span class="tipo">Role:</span> Socio</p>
+                <p><span class="tipo">E-mail:</span> smodesto@gmail.com</p>
+                <p><span class="tipo">Palavra-chave:</span> 123qwe#</p>
             </div>
         </div>
     </div>
