--- a/PortalSocios/PortalSocios/Views/Home/Vantagens.cshtml
+++ b/PortalSocios/PortalSocios/Views/Home/Vantagens.cshtml
@@ -5,25 +5,19 @@
 <head>
     <meta charset="utf-8" />
     <title> Vantagens | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
-    <style>
-        .imagem {
-            border: 4px solid #ffffff;
-        }
-    </style>
-    <script>
-    </script>
+    <link rel="stylesheet" href="~/Content/Site.css" />
 </head>
 <body>
-    <h2>Vantagens</h2>
+    <div class="titulo"><h3>Vantagens</h3></div>
     <hr />
     <div class="container">
-        <div class="row">
+        <div class="row painel">
             @foreach (var item in Model) {
                 if (item.BeneficioID < 7) {
                     <div class="col-lg-2 text-center">
                         <!--<img class="img-circle img-responsive img-center imagem" src="~/Content/Imagens/vantagem@(item.BeneficioID).jpg" />-->
                         <img class="img-circle img-responsive img-center imagem" src="http://placehold.it/200x200" />                        
-                        <h4>@Html.DisplayFor(modelItem => item.Descricao)</h4>
+                        <h5>@Html.DisplayFor(modelItem => item.Descricao)</h5>
                     </div>
                 }
             }
