--- a/PortalSocios/PortalSocios/Content/Site.css
+++ b/PortalSocios/PortalSocios/Content/Site.css
@@ -45,3 +45,62 @@ input[type="checkbox"].input-validation-error {
 .validation-summary-valid {
     display: none;
 }
+
+/* ########## CSS ADICIONADO ########## */
+
+#foto {
+    margin-top: 25px;
+}
+
+#lista {
+    overflow-x: auto;
+}
+
+.titulo {
+    text-align: center;
+    color: #000000;
+}
+
+.painel {
+    background-color: rgba(255, 255, 255, 0.3);
+    padding: 25px 0px 25px 0px;
+    border-radius: 5px;
+    text-align:center;
+}
+
+.painel2 {
+    background-color: rgba(255, 255, 255, 0.3);
+    padding: 25px 0px 25px 0px;
+    border-radius: 5px;
+}
+
+.imagem {
+    border: 3px solid #000000;
+    margin-top: 10px;
+}
+
+.colunas {
+    text-align: center;
+}
+
+.tipo { 
+    font-weight: bold;
+} 
+
+.entrada {
+    display:block;
+    margin: 0 auto;
+}
+
+.ligacoes {
+    font-weight: normal;
+}
+
+.reg1 {
+    margin-top: 10px;
+}
+ 
+#reg2 {
+    display:block;
+    margin: 10px auto;
+}
