--- a/PortalSocios/PortalSocios/Views/Account/Login.cshtml
+++ b/PortalSocios/PortalSocios/Views/Account/Login.cshtml
@@ -1,28 +1,25 @@
 ﻿@model PortalSocios.Models.LoginViewModel
 
-@{
-    ViewBag.Title = "Entrar";
-}
-
 <title> Entrar | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
 
-<h2>@ViewBag.Title</h2>
+
+<div class="titulo"><h3>Entrar</h3></div>
 <hr />
-<div class="row">
-    <div class="col-md-8">
+<div class="row painel">
+    <div class="col-md-12">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
                 @Html.AntiForgeryToken()
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
                     <div class="col-md-12">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "E-mail" })
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control entrada", @placeholder = "E-mail" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-12">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Palavra-passe" })
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control entrada", @placeholder = "Palavra-passe" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -36,14 +33,14 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-12">
-                        <input type="submit" value="Entrar" class="btn btn-success" />
+                        <input type="submit" value="Entrar" class="btn btn-primary" />
                     </div>
                 </div>
                 <p class="col-md-12">
                     @Html.ActionLink("Criar uma conta nova?", "Register")
                 </p>
                 <p class="col-md-12">
-                    @Html.ActionLink("Esqueceu-se da sua palavra-chave?", "ForgotPassword")
+                    @Html.ActionLink("Esqueceste-te da tua palavra-chave?", "ForgotPassword")
                 </p>
             }
         </section>
