--- a/PortalSocios/PortalSocios/Views/Beneficios/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/Beneficios/Delete.cshtml
@@ -35,7 +35,7 @@
 
         <div class="form-actions no-color">
             @Html.ActionLink("Voltar à lista", "Index") |
-            <input type="submit" value="Sim" class="btn btn-success" />
+            <input type="submit" value="Sim" class="btn btn-primary" />
         </div>
     }
 </div>
