--- a/PortalSocios/PortalSocios/Views/Funcionarios/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/Funcionarios/Delete.cshtml
@@ -75,7 +75,7 @@
 
         <div class="form-actions no-color">            
             @Html.ActionLink("Voltar à lista", "Index") |
-            <input type="submit" value="Delete" class="btn btn-success" />
+            <input type="submit" value="Delete" class="btn btn-primary" />
         </div>
     }
 </div>
