--- a/PortalSocios/PortalSocios/Views/Pagamentos/Create.cshtml
+++ b/PortalSocios/PortalSocios/Views/Pagamentos/Create.cshtml
@@ -94,7 +94,7 @@
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Criar" class="btn btn-success" />
+                    <input type="submit" value="Criar" class="btn btn-primary" />
                 </div>
             </div>
         </div>
