--- a/PortalSocios/PortalSocios/Views/RolesAdmin/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/RolesAdmin/Delete.cshtml
@@ -27,7 +27,7 @@
 
         <div class="form-actions no-color">            
             @Html.ActionLink("Voltar à lista", "Index") |
-            <input type="submit" value="Sim" class="btn btn-success" />
+            <input type="submit" value="Sim" class="btn btn-primary" />
         </div>
     }
 </div>
