--- a/PortalSocios/PortalSocios/Views/Shared/_Layout.cshtml
+++ b/PortalSocios/PortalSocios/Views/Shared/_Layout.cshtml
@@ -4,34 +4,32 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="~/Content/Imagens/relvado.png" />
+    <style>
+        #rodape { color: #bababa }
+    </style>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top ligacoes">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Portal dos Sócios", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("Portal dos Sócios", "Index", "Home", null, new { @class = "navbar-brand ligacoes" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Sobre", "Sobre", "Home")</li>
-                    <li>@Html.ActionLink("Vantagens", "Vantagens", "Home")</li>
-                    <li>@Html.ActionLink("Quotas", "Quotas", "Home")</li>
+                    <li>@Html.ActionLink("Sobre", "Sobre", "Home", null, new { @class = "ligacoes" })</li>
+                    <li>@Html.ActionLink("Vantagens", "Vantagens", "Home", null, new { @class = "ligacoes" })</li>
+                    <li>@Html.ActionLink("Quotas", "Quotas", "Home", null, new { @class = "ligacoes" })</li>
 
-                    @if (User.Identity.IsAuthenticated) {
-                        <li>@Html.ActionLink("Pagamentos", "Index", "Pagamentos")</li>
+                    @if (User.IsInRole("Socio")) {
+                        <li>@Html.ActionLink("Pagamentos", "Index", "Pagamentos", null, new { @class = "ligacoes" })</li>
                     }
 
                     @if (User.IsInRole("Funcionario")) {
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestão da BD<b class="caret"></b></a>
+                            <a href="#" class="dropdown-toggle ligacoes" data-toggle="dropdown">Gestão da BD<b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li><a href="~/Socios/Index">Sócios</a></li>
                                 <li><a href="~/Quotas/Index">Quotas</a></li>
@@ -52,7 +50,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        <footer id="rodape">
             <p>Clube Desportivo Coxos da Bola &copy; @DateTime.Now.Year - Todos os direitos reservados</p>
         </footer>
     </div>
