--- a/PortalSocios/PortalSocios/Views/Socios/Create.cshtml
+++ b/PortalSocios/PortalSocios/Views/Socios/Create.cshtml
@@ -19,13 +19,13 @@
     <link rel="stylesheet" href="~/Content/bootstrap-datepicker3.min.css" />
 </head>
 <body>
-    <h3>Criar Novo Sócio</h3>
+    <div class="titulo"><h3>Criar Novo Sócio</h3></div>
+    <hr />
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
-            <hr />
+        <div class="form-horizontal painel2">            
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
                 @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -92,14 +92,6 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Fotografia, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Fotografia, new { htmlAttributes = new { @type = "file", @maxlength = "30" } })
-                    @Html.ValidationMessageFor(model => model.Fotografia, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
                 @Html.LabelFor(model => model.CategoriaFK, "Categoria", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownList("CategoriaFK", null, htmlAttributes: new { @class = "form-control" })
@@ -108,16 +100,21 @@
             </div>
 
             <div class="form-group">
+                @Html.LabelFor(model => model.Fotografia, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Fotografia, new { htmlAttributes = new { @type = "file", @maxlength = "30" } })
+                    @Html.ValidationMessageFor(model => model.Fotografia, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Criar" class="btn btn-success" />
+                    @Html.ActionLink("Voltar à lista", "Index") |
+                    <input type="submit" value="Criar" class="btn btn-primary" />
                 </div>
             </div>
         </div>
     }
-
-    <div>
-        @Html.ActionLink("Voltar à lista", "Index")
-    </div>
     <script type="text/javascript">
         $('#DataNasc').datepicker({
             format: "yyyy/mm/dd",
