--- a/PortalSocios/PortalSocios/Views/Socios/Edit.cshtml
+++ b/PortalSocios/PortalSocios/Views/Socios/Edit.cshtml
@@ -1,9 +1,5 @@
 ﻿@model PortalSocios.Models.Socios
 
-@{
-    ViewBag.Title = "Edit";
-}
-
 <!DOCTYPE html>
 <html lang="pt">
 <head>
@@ -19,13 +15,13 @@
     <link rel="stylesheet" href="~/Content/bootstrap-datepicker3.min.css" />
 </head>
 <body>
-    <h3>Editar Sócio</h3>
+    <div class="titulo"><h3>Editar Sócio</h3></div>
+    <hr />
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
-            <hr />
+        <div class="form-horizontal painel2">            
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.SocioID)
             @Html.HiddenFor(model => model.NumSocio)
@@ -116,15 +112,12 @@
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Guardar" class="btn btn-success" />
+                    @Html.ActionLink("Voltar à lista", "Index") |
+                    <input type="submit" value="Guardar" class="btn btn-primary" />
                 </div>
             </div>
         </div>
     }
-
-    <div>
-        @Html.ActionLink("Voltar à lista", "Index")
-    </div>
     <script type="text/javascript">
         $('#DataNasc').datepicker({
             format: "yyyy/mm/dd",
